--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@splitsoftware/splitio": "^10.23.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
     "esm": "^3.2.25",
     "express": "~4.16.1",
